<resources>
    <string name="app_name">do N key</string>
    <string name="manage_account">Manage Account</string>
    <string name="user_name">User Name</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="email_id_text">Email Id</string>
    <string name="sample_mail">sample@gmail.com</string>
    <string name="gender_text">Gender</string>
    <string name="date_of_birth_text">Date of Birth</string>
    <string name="home_address_text">Home Address</string>
    <string name="sample_address">Dindigul, Tamilnadu</string>
    <string name="office_address_text">Office Address</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="no_network_connection_available">No Network connection Available</string>
    <string name="refresh">Refresh</string>
    <string name="selected_products">Selected Products</string>
    <string name="no_alcohol_note">Delivery of alcohol or any illegal items is prohibited by law.</string>
    <string name="food_items">Food Items</string>
    <string name="medicines">Medicines</string>
    <string name="documents_and_books">Documents and Books</string>
    <string name="electronic_items">Electronic Items</string>
    <string name="clothes">Clothes</string>
    <string name="items_for_repair">Items for Repair</string>
    <string name="business_deliveries">Business Deliveries</string>
    <string name="others">Others</string>
    <string name="done">Done</string>
    <string name="product_descrption">Product Descrption</string>
    <string name="nothing_is_selected">Nothing is Selected</string>
    <string name="enter_pickup_location">Enter Pickup Location</string>
    <string name="enter_destination_location">Enter Destination Location</string>
    <string name="cancel_reason_1">Found Better price elsewhere</string>
    <string name="cancel_reason_2">Asked to pay Extra</string>
    <string name="cancel_reason_3">Drop location denied</string>
    <string name="cancel_reason_4">Low rating driver</string>
    <string name="cancel_reason_5">Wrong pickup location</string>
    <string name="cancel_reason_6">Asked to cancel &amp; take offline ride</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="why_cancel">Why do you want to cancel?</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="send">Send</string>
    <string name="messages">Messages</string>
    <string name="always_ask_recipt_before_paying">Always ask recipt before paying…</string>
    <string name="type_a_message">Type a Message</string>
    <string name="tips_the_driver">Tips the Driver</string>
    <string name="driver_name">Smith Gray</string>
    <string name="rating">4.9</string>
    <string name="one_rupee">₹1</string>
    <string name="two_rupee">₹2</string>
    <string name="three_rupee">₹3</string>
    <string name="four_rupee">₹4</string>
    <string name="five_rupee">₹5</string>
    <string name="ten_rupee">₹10</string>
    <string name="choose_other_amount">Choose Other Amount</string>
    <string name="think_about_service">What do you think about the service?</string>
    <string name="communication">Communication</string>
    <string name="behaviour">Behaviour</string>
    <string name="location_finder">Location Finder</string>
    <string name="ontime">Ontime</string>
    <string name="maybe_next_time">Maybe next time</string>
    <string name="favourites">Favourites</string>
    <string name="help_center">Help Center</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="lorem_ipsum_2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</string>
    <string name="signin_small">Sign In</string>
    <string name="signin">SIGN IN</string>
    <string name="welcome_back_text">Welcome Back! Enter your Existing Account</string>
    <string name="phone_or_mail">Phone / E-mail *</string>
    <string name="password_must">Password *</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_with_otp">Login With OTP</string>
    <string name="using_social_account">Or connect using Social Account</string>
    <string name="dont_have_an_account">Don’t have an account?&#160;</string>
    <string name="verification">Verification</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="covered_number">+9190* * * * *194</string>
    <string name="please_enter_correct_otp">Please enter correct OTP</string>
    <string name="didn_t_get_code_yet">Didn\'t Get code yet?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="your_phone_number_is_safe_with_us">Your phone number is safe with us</string>
    <string name="verify">Verify</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_method_colon">Payment Method : </string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="donkey_wallet">do N key Wallet</string>
    <string name="available_balance">Available Balance : 0.00</string>
    <string name="cash">Cash</string>
    <string name="available_after_booking">Below payment methods are available after your booking confirmation</string>
    <string name="credit_or_debit_card">Credit or Debit Card</string>
    <string name="upi">UPI</string>
    <string name="net_banking">Net Banking</string>
    <string name="paypal">Paypal</string>
    <string name="rate_your_trip">Rate Your Trip</string>
    <string name="how_is_your_trip">How is Your Trip?</string>
    <string name="write_your_feedback">Write your Feedback</string>
    <string name="trip_detail">Trip Detail</string>
    <string name="skate_park">Skate Park</string>
    <string name="home">Home</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="trip_expenses">Trip Expenses</string>
    <string name="discount_voucher">Discount Voucher</string>
    <string name="total">Total</string>
    <string name="submit">Submit</string>
    <string name="type_to_search_location">Type to Search Location</string>
    <string name="select_from_map">Select from Map</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Change Theme</string>
    <string name="select_language">Select Language</string>
    <string name="hindi" translatable="false">हिंदी</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="name_must">Name *</string>
    <string name="email_id_must">Email ID *</string>
    <string name="phone_number_must">Phone Number *</string>
    <string name="already_have_an_account">Already have an Account?&#160;</string>
    <string name="signup_small">Sign Up</string>
    <string name="signup">SIGN UP</string>
    <string name="you_are_ready_to_go">You are ready to go.!</string>
    <string name="thanks_for_signin">Thanks for taking your time to create account with us. Now this is the fun part Let’s explore the app.</string>
    <string name="get_started">Get Started</string>
    <string name="proudly_made_in_india">Proudly made in India</string>
    <string name="bike_number">TN01AA1000</string>
    <string name="bike_model">Splender</string>
    <string name="your_review">Your Review</string>
    <string name="sample_feedback">Good Service, Friendly driver \n maintained the car Well Cleaned</string>
    <string name="trip_history">Trip History</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="vouchers">Vouchers</string>
    <string name="have_a_promo_code_enter_it_here">Have a Promo code? Enter it Here</string>
    <string name="vouchers_details">Vouchers Details</string>
    <string name="things_to_keep_in_mind">Things to Keep in Mind</string>
    <string name="things_to_keep_in_mind_1">Item should fit in the Backpack</string>
    <string name="things_to_keep_in_mind_2">Keep the items packed and ready for pick up</string>
    <string name="things_to_keep_in_mind_3">Avoid sending illegal, fragile, or high value items</string>
    <string name="pickup">PickUp</string>
    <string name="name_colon">Name :</string>
    <string name="enter_name">Enter Name</string>
    <string name="phone_colon">Phone :</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="landmark_colon">Landmark :</string>
    <string name="enter_landmark">Enter Landmark</string>
    <string name="order_no_product_details_colon">Order no/ Product Details :</string>
    <string name="write_a_note_to_driver">Write a note to Driver</string>
    <string name="your_otp">Your OTP</string>
    <string name="sample_otp">1234</string>
    <string name="rider_speaks_colon">Rider Speaks :</string>
    <string name="tamil_english">Tamil, English</string>
    <string name="distance">Distance</string>
    <string name="sample_distance">1.4Km</string>
    <string name="travel_time">Travel Time</string>
    <string name="sample_travel_time">6 min</string>
    <string name="trip_price">Trip Price</string>
    <string name="rating_text">Rating</string>
    <string name="driving_time">Driving Time</string>
    <string name="sample_driving_time">800Hrs</string>
    <string name="experiences">Experiences</string>
    <string name="sample_experiences">7 Months</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="price_for_this_delivery">Price for this Delivery</string>
    <string name="change_payment_method">Change Payment Method</string>
    <string name="book_the_ride">Book the Ride</string>
    <string name="you_can_do_online_payment_while_on_ride_as_well">You can do online payment while on ride as well</string>
    <string name="finding_the_perfect_driver_for_you">Finding the perfect driver for you 😊</string>
    <string name="cancel">Cancel</string>
    <string name="driver_not_available">Sorry, Driver not available at this moment</string>
    <string name="ok">OK</string>
    <string name="try_again">Try Again</string>
    <string name="your_pickup_and_drop_locations_are_same">Your Pickup and drop locations are same</string>
    <string name="please_choose_a_different_location_to_book_a_ride">Please choose a different location to book a ride</string>
    <string name="okay">OKAY</string>
    <string name="service_not_available_here">Service Not Available Here</string>
    <string name="change_location">Change Location</string>
    <string name="prime_business_partner">Prime Business Partner</string>
    <string name="business_partner_not_available">Our business partner is not available in this area. If you would like to start a service click on prime business partner</string>
    <string name="my_account">My Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="promo">Promo</string>
    <string name="general">General</string>
    <string name="complete_your_profile_to_stand_out">Complete your Profile to Stand Out</string>
    <string name="logout">Logout</string>
    <string name="help_desk">Help Desk</string>
</resources>