<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="@dimen/_10sdp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_24sdp"
            android:layout_weight="2"
            android:src="@drawable/cancel_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/manage_account"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


   <ImageView
       android:layout_width="@dimen/_80sdp"
       android:layout_height="@dimen/_80sdp"
       android:layout_gravity="center"
       android:layout_marginTop="@dimen/_10sdp"
       android:src="@drawable/profile_icon"/>


    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/black_color"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/white_color"
        android:layout_marginTop="@dimen/_10ssp"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_15ssp"
        android:layout_marginEnd="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_20ssp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_text"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_color"
            />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="9876543210"
            android:gravity="end"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_color"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_15ssp"
        android:layout_marginEnd="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_20ssp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id_text"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_color"
            />

        <TextView
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_mail"
            android:gravity="end"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_color"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginStart="@dimen/_15ssp"
        android:layout_marginEnd="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_20ssp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender_text"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_color"
            />

        <TextView
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Male"
            android:gravity="end"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_color"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginStart="@dimen/_15ssp"
        android:layout_marginEnd="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_20ssp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_of_birth_text"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_color"
            />

        <TextView
            android:id="@+id/dateOfBirth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="01.01.2020"
            android:gravity="end"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_color"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_15ssp"
        android:layout_marginEnd="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_20ssp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_address_text"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_color"
            />

        <TextView
            android:id="@+id/homeAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_address"
            android:gravity="end"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_color"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_15ssp"
        android:layout_marginEnd="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_20ssp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/office_address_text"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_color"
            />

        <TextView
            android:id="@+id/officeAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_address"
            android:gravity="end"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_color"
            android:textStyle="bold"
            />

    </LinearLayout>
</LinearLayout>
</LinearLayout>