<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Fragement.profileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/my_account"
            android:textColor="@color/black_color"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="end"
            android:src="@drawable/settings"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/profile_icon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User name"
            android:textStyle="bold"
            android:textColor="@color/black_color"
            android:textSize="@dimen/_20ssp"
            android:gravity="center"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/purple_500"
        android:layout_margin="@dimen/_20sdp"
        android:backgroundTint="@color/purple_500"
        app:cardCornerRadius="@dimen/_15sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_20sdp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:src="@drawable/percent"
                />
             <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                 android:layout_weight="5"
                 android:textColor="@color/black_color"
                 android:gravity="center"
                android:textAlignment="center"
                android:text="@string/complete_your_profile_to_stand_out"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginLeft="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/edit_profile"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_account"
            android:textColor="@color/black_color"
            android:textSize="@dimen/_14ssp" />


        <LinearLayout
            android:id="@+id/manage_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10ssp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:src="@drawable/profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_7ssp"
                android:text="@string/manage_account"
                android:textColor="@color/black_color"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_6ssp"
                    android:src="@drawable/greater" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line" />

        <LinearLayout
            android:id="@+id/manage_promo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10ssp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:src="@drawable/promo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_7ssp"
                android:text="@string/promo"
                android:textColor="@color/black_color"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_6ssp"
                    android:src="@drawable/greater" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line" />


        <LinearLayout
            android:id="@+id/manage_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10ssp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:src="@drawable/myorder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_7ssp"
                android:text="@string/my_orders"
                android:textColor="@color/black_color"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_6ssp"
                    android:src="@drawable/greater" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:textColor="@color/black_color"
            android:textSize="@dimen/_14ssp" />


        <LinearLayout
            android:id="@+id/manage_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10ssp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:src="@drawable/help" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_7ssp"
                android:text="@string/help_desk"
                android:textColor="@color/black_color"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_6ssp"
                    android:src="@drawable/greater" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line" />

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10ssp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:src="@drawable/settings_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_7ssp"
                android:text="@string/settings"
                android:textColor="@color/black_color"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_6ssp"
                    android:src="@drawable/greater" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line" />


        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10ssp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:src="@drawable/logout_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_7ssp"
                android:text="@string/logout"
                android:textColor="@color/black_color"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />



        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line" />

    </LinearLayout>

    </ScrollView>

</LinearLayout>